# SignApp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  inspect_glb.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
docs/: API.md  DEVELOPMENT.md  INSTALLATION.md
src/sign_app/: __init__.py  api.py  seed_signs.py
src/sign_app/audio/: __init__.py
src/sign_app/disfluency/: __init__.py  inference.py  training.py
src/sign_app/sign_language_text/: __init__.py  gloss_converter.py  inference.py  training.py
src/sign_app/ui/: __init__.py  avatar.glb  fingerspellDictionary.js  index.html  main.js  signEngine.js
tests/: __init__.py  test_gloss_converter.py
